fix: 存储区域单元测试