@@ -15,6 +15,8 @@ import cn.iocoder.yudao.framework.common.pojo.PageResult;
 
 import jakarta.annotation.Resource;
 import org.springframework.context.annotation.Import;
+
+import java.time.temporal.ChronoUnit;
 import java.util.*;
 import java.time.LocalDateTime;
 
@@ -30,6 +32,7 @@ import static org.mockito.Mockito.*;
 
 /**
  * {@link StorageAreaInfoServiceImpl} 的单元测试类
+ * 存放区域表
  *
  * @author 芋道源码
  */
@@ -92,8 +95,8 @@ public class StorageAreaInfoServiceImplTest extends BaseDbUnitTest {
 
         // 调用
         storageAreaInfoService.deleteStorageAreaInfo(id);
-       // 校验数据不存在了
-       assertNull(storageAreaInfoMapper.selectById(id));
+        // 校验数据不存在了
+        assertNull(storageAreaInfoMapper.selectById(id));
     }
 
     @Test
@@ -106,78 +109,80 @@ public class StorageAreaInfoServiceImplTest extends BaseDbUnitTest {
     }
 
     @Test
-    @Disabled  // TODO 请修改 null 为需要的值，然后删除 @Disabled 注解
+//    @Disabled  // TODO 请修改 null 为需要的值，然后删除 @Disabled 注解
     public void testGetStorageAreaInfoPage() {
-       // mock 数据
-       StorageAreaInfoDO dbStorageAreaInfo = randomPojo(StorageAreaInfoDO.class, o -> { // 等会查询到
-           o.setCode(null);
-           o.setName(null);
-           o.setLocationInfo(null);
-           o.setCreateTime(null);
-           o.setRemark(null);
-       });
-       storageAreaInfoMapper.insert(dbStorageAreaInfo);
-       // 测试 code 不匹配
-       storageAreaInfoMapper.insert(cloneIgnoreId(dbStorageAreaInfo, o -> o.setCode(null)));
-       // 测试 name 不匹配
-       storageAreaInfoMapper.insert(cloneIgnoreId(dbStorageAreaInfo, o -> o.setName(null)));
-       // 测试 locationInfo 不匹配
-       storageAreaInfoMapper.insert(cloneIgnoreId(dbStorageAreaInfo, o -> o.setLocationInfo(null)));
-       // 测试 createTime 不匹配
-       storageAreaInfoMapper.insert(cloneIgnoreId(dbStorageAreaInfo, o -> o.setCreateTime(null)));
-       // 测试 remark 不匹配
-       storageAreaInfoMapper.insert(cloneIgnoreId(dbStorageAreaInfo, o -> o.setRemark(null)));
-       // 准备参数
-       StorageAreaInfoPageReqVO reqVO = new StorageAreaInfoPageReqVO();
-       reqVO.setCode(null);
-       reqVO.setName(null);
-       reqVO.setLocationInfo(null);
-       reqVO.setCreateTime(buildBetweenTime(2023, 2, 1, 2023, 2, 28));
-       reqVO.setRemark(null);
+        LocalDateTime now = LocalDateTime.now().truncatedTo(ChronoUnit.MICROS);
+        // mock 数据
+        StorageAreaInfoDO dbStorageAreaInfo = randomPojo(StorageAreaInfoDO.class, o -> { // 等会查询到
+            o.setCode("123456");
+            o.setName("123456");
+            o.setLocationInfo("123456");
+            o.setCreateTime(now);
+            o.setRemark("123456");
+        });
+        storageAreaInfoMapper.insert(dbStorageAreaInfo);
+        // 测试 code 不匹配
+        storageAreaInfoMapper.insert(cloneIgnoreId(dbStorageAreaInfo, o -> o.setCode("12555")));
+        // 测试 name 不匹配
+        storageAreaInfoMapper.insert(cloneIgnoreId(dbStorageAreaInfo, o -> o.setName("6555")));
+        // 测试 locationInfo 不匹配
+        storageAreaInfoMapper.insert(cloneIgnoreId(dbStorageAreaInfo, o -> o.setLocationInfo("1152")));
+        // 测试 createTime 不匹配
+        storageAreaInfoMapper.insert(cloneIgnoreId(dbStorageAreaInfo, o -> o.setCreateTime(now.plusDays(3))));
+        // 测试 remark 不匹配
+        storageAreaInfoMapper.insert(cloneIgnoreId(dbStorageAreaInfo, o -> o.setRemark("1564")));
+        // 准备参数
+        StorageAreaInfoPageReqVO reqVO = new StorageAreaInfoPageReqVO();
+        reqVO.setCode("123456");
+        reqVO.setName("123456");
+        reqVO.setLocationInfo("123456");
+        reqVO.setCreateTime(new LocalDateTime[]{now.minusDays(1), now.plusDays(1)});
+        reqVO.setRemark("123456");
 
-       // 调用
-       PageResult<StorageAreaInfoDO> pageResult = storageAreaInfoService.getStorageAreaInfoPage(reqVO);
-       // 断言
-       assertEquals(1, pageResult.getTotal());
-       assertEquals(1, pageResult.getList().size());
-       assertPojoEquals(dbStorageAreaInfo, pageResult.getList().get(0));
+        // 调用
+        PageResult<StorageAreaInfoDO> pageResult = storageAreaInfoService.getStorageAreaInfoPage(reqVO);
+        // 断言
+        assertEquals(1, pageResult.getTotal());
+        assertEquals(1, pageResult.getList().size());
+        assertPojoEquals(dbStorageAreaInfo, pageResult.getList().get(0));
     }
 
     @Test
-    @Disabled  // TODO 请修改 null 为需要的值，然后删除 @Disabled 注解
+//    @Disabled  // TODO 请修改 null 为需要的值，然后删除 @Disabled 注解
     public void testGetStorageAreaInfoList() {
-       // mock 数据
-       StorageAreaInfoDO dbStorageAreaInfo = randomPojo(StorageAreaInfoDO.class, o -> { // 等会查询到
-           o.setCode(null);
-           o.setName(null);
-           o.setLocationInfo(null);
-           o.setCreateTime(null);
-           o.setRemark(null);
-       });
-       storageAreaInfoMapper.insert(dbStorageAreaInfo);
-       // 测试 code 不匹配
-       storageAreaInfoMapper.insert(cloneIgnoreId(dbStorageAreaInfo, o -> o.setCode(null)));
-       // 测试 name 不匹配
-       storageAreaInfoMapper.insert(cloneIgnoreId(dbStorageAreaInfo, o -> o.setName(null)));
-       // 测试 locationInfo 不匹配
-       storageAreaInfoMapper.insert(cloneIgnoreId(dbStorageAreaInfo, o -> o.setLocationInfo(null)));
-       // 测试 createTime 不匹配
-       storageAreaInfoMapper.insert(cloneIgnoreId(dbStorageAreaInfo, o -> o.setCreateTime(null)));
-       // 测试 remark 不匹配
-       storageAreaInfoMapper.insert(cloneIgnoreId(dbStorageAreaInfo, o -> o.setRemark(null)));
-       // 准备参数
-       StorageAreaInfoExportReqVO reqVO = new StorageAreaInfoExportReqVO();
-       reqVO.setCode(null);
-       reqVO.setName(null);
-       reqVO.setLocationInfo(null);
-       reqVO.setCreateTime(buildBetweenTime(2023, 2, 1, 2023, 2, 28));
-       reqVO.setRemark(null);
+        LocalDateTime now = LocalDateTime.now().truncatedTo(ChronoUnit.MICROS);
+        // mock 数据
+        StorageAreaInfoDO dbStorageAreaInfo = randomPojo(StorageAreaInfoDO.class, o -> { // 等会查询到
+            o.setCode("123456");
+            o.setName("123456");
+            o.setLocationInfo("123456");
+            o.setCreateTime(now);
+            o.setRemark("123456");
+        });
+        storageAreaInfoMapper.insert(dbStorageAreaInfo);
+        // 测试 code 不匹配
+        storageAreaInfoMapper.insert(cloneIgnoreId(dbStorageAreaInfo, o -> o.setCode("12555")));
+        // 测试 name 不匹配
+        storageAreaInfoMapper.insert(cloneIgnoreId(dbStorageAreaInfo, o -> o.setName("6555")));
+        // 测试 locationInfo 不匹配
+        storageAreaInfoMapper.insert(cloneIgnoreId(dbStorageAreaInfo, o -> o.setLocationInfo("1152")));
+        // 测试 createTime 不匹配
+        storageAreaInfoMapper.insert(cloneIgnoreId(dbStorageAreaInfo, o -> o.setCreateTime(now.plusDays(3))));
+        // 测试 remark 不匹配
+        storageAreaInfoMapper.insert(cloneIgnoreId(dbStorageAreaInfo, o -> o.setRemark("1564")));
+        // 准备参数
+        StorageAreaInfoExportReqVO reqVO = new StorageAreaInfoExportReqVO();
+        reqVO.setCode("123456");
+        reqVO.setName("123456");
+        reqVO.setLocationInfo("123456");
+        reqVO.setCreateTime(new LocalDateTime[]{now.minusDays(1), now.plusDays(1)});
+        reqVO.setRemark("123456");
 
-       // 调用
-       List<StorageAreaInfoDO> list = storageAreaInfoService.getStorageAreaInfoList(reqVO);
-       // 断言
-       assertEquals(1, list.size());
-       assertPojoEquals(dbStorageAreaInfo, list.get(0));
+        // 调用
+        List<StorageAreaInfoDO> list = storageAreaInfoService.getStorageAreaInfoList(reqVO);
+        // 断言
+        assertEquals(1, list.size());
+        assertPojoEquals(dbStorageAreaInfo, list.getFirst());
     }
 
 }
